--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,16 @@
 			<artifactId>jquery</artifactId>
 			<version>3.7.1</version>
 		</dependency>
+		<!-- JDBC -->
+        <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+		<!-- Spring SEcurity -->
+        <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
         
 
 	</dependencies>
