--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,9 @@ spring.devtools.livereload.enabled=true
 security.locing-border-count=3
 # アカウントロックの継続時間
 security.locking-time=1
+
+# ログレベル
+logging.level.root=INFO
+logging.level.example.demo=DEBUG
+# ログ出力先
+logging.file.name=C:/work/log/debug
